--- a/Web/backend.css
+++ b/Web/backend.css
@@ -1,3 +1,11 @@
+/* remove blue highlight rectangle */
+*:focus {
+    outline: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
