--- a/Web/backend.css
+++ b/Web/backend.css
@@ -97,9 +97,14 @@ label {
 }
 
 #content-wrap {
+	display: inline-block;
+	width: 60%;
+} 
+
+#right-sidebar {
 	float: right;
-	width: 80%;
-}  
+	width: 20%;
+} 
 
 #pickupTable, #dropoffTable, #talkTable { 
 	list-style-type: none; 
@@ -108,7 +113,7 @@ label {
 	width: 60%; 
 }
 
-ul li {
+ul li, li2 {
 	background: #e6dbbe;
     margin: 0 5px 5px 5px;
     padding: 5px;
@@ -117,16 +122,18 @@ ul li {
     -webkit-border-radius: 30;
 	-moz-border-radius: 30;
 	border-radius: 30px;
+	list-style-type: none;
 }
 
-#pickupTable, #dropoffTable {
+
+#pickupTable, #dropoffTable, #pickupTable2, #dropoffTable2 {
 	width: 100%;
 	font-family: Palatino Linotype;
 	color: #1c2856; 
 	font-size: 70%;
 }
 
-#talkTable {
+#talkTable, #talkTable2 {
 	width: 100%;
 	font-family: Palatino Linotype;
 	color: #1c2856; 
